--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.datasource.password = root
 spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+#secret key - should be encrypted
+jwt.secret=secretkey
+#3 minutes validity
+jwt.token.validity=180000
+
+#ignore null fields in json
+spring.jackson.default-property-inclusion=NON_NULL
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.main.allow-circular-references=true
