--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.datasource.url = jdbc:mysql://127.0.0.1:3336/post_suivi_stagiaires
+#spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/dbpoe
 spring.datasource.username = root
 spring.datasource.password = root
+#spring.datasource.username = poe
+#spring.datasource.password = password
 
 spring.jpa.generate-ddl = true
+# DDL Auto: none, create, create-drop, update, validate
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #secret key - should be encrypted
 jwt.secret=secretkey
 #3 minutes validity
-jwt.token.validity=180000
+jwt.token.validity=1800000
 
 #ignore null fields in json
 spring.jackson.default-property-inclusion=NON_NULL
