--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url = jdbc:mysql://127.0.0.1:3336/post_suivi_stagiaires
   #spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/dbpoe
 spring.datasource.username = root
 spring.datasource.password = root
-#test GitIgnore salut
+#test GitIgnore pourla15emefois
 #spring.datasource.username = poe
 #spring.datasource.password = password
 
