Send mail from the back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.main.allow-circular-references=true
 
+#mailjet keys
+mail.api="731b0489b8e1c5f8b27f6e774930efc0"
+mail.secret="b3ae7418edb711ca539432223eb14c7b"
+
