--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.main.allow-circular-references=true
 
 #mailjet keys
-mail.api="731b0489b8e1c5f8b27f6e774930efc0"
-mail.secret="b3ae7418edb711ca539432223eb14c7b"
+mail.api=df3c1439cb29ccf712637af3d061ecf8
+mail.secret=efcbf335e950bed5b82154f312fbb1c6
+mail.sender=anthony-andre@live.fr
 
